--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,5 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-bevy = { git="https://github.com/bevyengine/bevy", commit="1398d78"}
+bevy = { version = "0.4" }
 rand = "0.7.3"
